--- a/tests/fixtures/test_web_elements_fixture.html
+++ b/tests/fixtures/test_web_elements_fixture.html
@@ -54,6 +54,10 @@
             background-image: linear-gradient(to bottom right, #f5cd79, #e15f41);
         }
 
+        .book.new {
+          font-weight: 1000;
+        }
+
         .description {
             display: flex;
             align-items: center;
@@ -76,7 +80,7 @@
 
         }
 
-        .not-aviable {
+        .not-available {
             background-color: #d63031;
             color: white;
         }
@@ -138,7 +142,7 @@
                     </li>
                 </ol>
             </div>
-            <p class="availability">Aviable</p>
+            <p class="availability">AVAILABLE</p>
         </div>
     </div>
     <div class="book">
@@ -174,7 +178,7 @@
                     </li>
                 </ol>
             </div>
-            <p class="availability">Aviable</p>
+            <p class="availability">AVAILABLE</p>
         </div>
     </div>
 
@@ -211,11 +215,11 @@
                     </li>
                 </ol>
             </div>
-            <p class="availability not-aviable">Not aviable</p>
+            <p class="availability not-available">Not AVAILABLE</p>
         </div>
     </div>
 
-    <div class="book">
+    <div class="book new">
         <div class="description">
             <div class="basic-info">
                 <div class="title">
@@ -248,7 +252,7 @@
                     </li>
                 </ol>
             </div>
-            <p class="availability">Aviable</p>
+            <p class="availability">AVAILABLE</p>
         </div>
     </div>
 </div>
